feat: export numbered walkthroughs as local video
